Solaris.
----------------------------------------------------------------------
Mon Apr 22 09:20:26 2002                        Michael Jennings (mej)

Fixed the use of an uninitialized variable pointed out by Azundris
<hacks@azundris.com>.
----------------------------------------------------------------------
Tue Apr 23 14:23:00 2002                        Michael Jennings (mej)

Redraw the buttonbar properly when moved.  Spotted by Azundris
<hacks@azundris.com>.

Also fixed the display of underlining with fonts lacking descent.
----------------------------------------------------------------------
Wed Apr 24 16:56:48 2002                        Michael Jennings (mej)

Fixed bug where initial options would get parsed even if they were
part of a -e/--exec expression.
----------------------------------------------------------------------
Wed Apr 24 22:27:51 2002                        Michael Jennings (mej)

Save buttonbar info when we save theme settings.
----------------------------------------------------------------------
Wed Apr 24 22:34:59 2002                        Michael Jennings (mej)

Fix warning.
----------------------------------------------------------------------
Fri Apr 26 14:28:08 2002                        Michael Jennings (mej)

Reverted Charles Clancy's shading patch (from the 21st) since it
breaks 24bpp on Linux.  Hopefully there is a better fix.

Fixed an ASSERT failure in the buttonbar redraw pointed out by
Laurence J. Lane <ljlane@debian.org>.

Also made multiple buttonbars work properly.
----------------------------------------------------------------------
Fri Apr 26 14:34:08 2002                        Michael Jennings (mej)

Minor tweak so bottom-docked buttonbars are properly placed.
----------------------------------------------------------------------
Sun Apr 28 10:06:32 2002                        Michael Jennings (mej)

Don't require the new libast just yet....
----------------------------------------------------------------------